--- a/http/a/main.css
+++ b/http/a/main.css
@@ -33,14 +33,14 @@ body {
 }
 :not(.target):target { animation: target 1s }
 .blk, .edit-summary, img.center, textarea { display: block }
-.ib { display: inline-block }
 .inline, summary * { display: inline }
-[hidden], .nodisplay, .target:not(:target), #content > .sctrls { display: none }
+[hidden], .nodisplay, .target:not(:target), #content > .sctrls, #side-by-side-diff:checked ~ * .inline-diff, #side-by-side-diff:not(:checked) ~ * .side-diff-a, #side-by-side-diff:not(:checked) ~ * .side-diff-b { display: none }
 .rel, .comment, .spoiler, body { position: relative }
 .abs, .ctrls, .iframe-16-9 iframe, #footer { position: absolute }
 .fullwidth, input[type='text'].fullwidth, input[type='email'].fullwidth, input[type='password'].fullwidth, .ta-cont, #ta-cont, .iframe-16-9, .iframe-16-9 iframe, #footer { width: 100% }
 .fullheight, .iframe-16-9 iframe, html { height: 100% }
 .maxwidth, img, input, code.blk, .flexcont > *, #mailinput { max-width: 100% }
+.side-diff-a, .side-diff-b { width: calc(50% - 0.2em) }
 .lft, .user > * { float: left }
 .rit, .user, h1 small, h2 small, .c-sig { float: right }
 .nofloat { float: none }
@@ -48,10 +48,11 @@ body {
 .nomar, body, input, .comment .hover *, fieldset, textarea, .error * { margin: 0 }
 .sumar, :not(img) + .desc, .blk, form *, .comment > blockquote:nth-child(2), .comment > pre:nth-child(2) { margin-top: 3px }
 .umar, :not(.row):not(.flex):not(.resp-flex) > section:not(:first-child), article:not(:first-child), form:not([action='/search/']), .connection-error, #footer, #sidebar { margin-top: 4px }
-#userlist .user { margin-top: 0.4em }
+#userlist .user, summary { margin-top: 0.4em }
 .bumar, .edit-summary, h1:not(:first-child), fieldset:not(:first-of-type) { margin-top: 0.5em }
 .bmar, .max-width, .error, .half, #notifs li { margin-bottom: 0.4em }
 .indt { margin-left: 2em }
+.user, .side-diff-b { margin-left: 0.4em }
 ul { padding-left: 2em }
 .check-list { list-style: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNiIgaGVpZ2h0PSIxNiIgZmlsbD0iIzBiMCI+PHBhdGggZD0iTTIuNSw5LjUgNSwxMiAxMy41LDMuNSAxNSw1IDUsMTUgMSwxMSIgLz48L3N2Zz4=') }
 .cross-list { list-style: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNiIgaGVpZ2h0PSIxNiIgZmlsbD0iI2YwMCI+PHBhdGggZD0iTTIsNSAxMywxNiAxNCwxNSAzLDQiIC8+PHBhdGggZD0iTTE0LDUgMywxNiAyLDE1IDEzLDQiIC8+PC9zdmc+') }
@@ -65,6 +66,10 @@ ul { padding-left: 2em }
 .br, .desc, .answer-count, .comment .mention, .button { border-radius: 0.25em }
 .hglt, .desc, .comment, article { background: rgba(255, 255, 255, 0.4) }
 .shglt, #content, #sidebar, #footer { background: rgba(255, 255, 255, 0.8) }
+.ib, .side-diff-a, .side-diff-b {
+	display: inline-block;
+	vertical-align: top;
+}
 code, iframe { background: #fff }
 code {
 	padding: 0.15em;
@@ -380,7 +385,7 @@ blockquote {
 	margin: 0.3em 0 0.3em 1.5em;
 }
 code.blk {
-	white-space: pre;
+	white-space: pre-wrap;
 	max-height: 600px;
 	overflow: auto;
 	word-break: normal;
@@ -421,7 +426,6 @@ fieldset {
 	max-width: 14em;
 	display: inline-block;
 	padding: 0.25em 0.5em 0.25em 0.25em;
-	margin-left: 0.4em;
 	text-align: left;
 }
 .user div { margin-left: 0.25em }
